--- a/papers/plarch23-fp_for_hw/plarch23-fp_for_hw.tex
+++ b/papers/plarch23-fp_for_hw/plarch23-fp_for_hw.tex
@@ -92,8 +92,8 @@ $^{(\ast)}$
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{Separating Description from Interpretation}
-\subtitle{The Case For Functional-Esque eDSLs for Hardware Design and Verification}
+% \title{Separating Description from Interpretation}
+\title{New Embedded DSLs for Hardware Design and Verification}
 
 %%
 %% The "author" command and its associated commands are used to define
@@ -103,8 +103,8 @@ $^{(\ast)}$
 %% used to denote shared contribution to the research.
 
 %Young-Jin Park, Rohit Agarwal, Oliver Yu, Lixiang (Andy) Yin, and Bryan Ngo have worked on the eDSLs presented in this paper.
-\author{Vighnesh Iyer, Young-Jin Park, Rohit Agarwal, Lixiang Yin, Bryan Ngo, Oliver Yu, Borivoje Nikolić}
-\email{{vighnesh.iyer,yjp20,rohaga,lyin19,bryanngo,oliveryu,bora}@berkeley.edu}
+\author{{\normalsize Vighnesh Iyer, Kevin Laeufer, Young-Jin Park, Rohit Agarwal, Lixiang Yin, Bryan Ngo, Oliver Yu, Koushik Sen, Borivoje Nikolić}}
+\email{{vighnesh.iyer,laeufer,yjp20,rohaga,lyin19,bryanngo,oliveryu,ksen,bora}@berkeley.edu}
 \orcid{0000-0001-6934-6577}
 \affiliation{%
   \institution{UC Berkeley}
@@ -128,16 +128,34 @@ $^{(\ast)}$
 
 
 \begin{abstract}
-Over the past few decades, many hardware design languages (e.g. Lava\cite{lava}, Chisel\cite{chisel}, PyMTL3\cite{pymtl3}) have been implemented as DSLs embedded in a general purpose programming language.
-This approach takes advantage of the host language's features and ecosystem, such as its type system, libraries, build tools, IDEs, and testing frameworks.
-We make the case that embedded DSLs are an ideal platform for HDLs, by leveraging their host languages to build \textit{functional APIs} for various aspects of hardware design and verification, such as RTL simulation, stimulus generation, and control flow compilation.
+
+% use the host language as leverage
 % temporal property specification
-%We invite discussion on what other primitives can be embedded in a general-purpose language to enhance RTL design and verification.
+% we show that embedded DSLs make it easy to design new DSLs for other hardware primitives
+
+% We invite discussion on what other primitives can be embedded in a general-purpose language to enhance RTL design and verification.
 % we're already familiar with this concept for HDLs implemented as eDSLs - but where else can we use this concept? I demonstrate 3 use cases: simcommand, parametric generators, sequences, recipes
 % embedding is not only good because of ecosystem, but also because it allows you to leverage features of the host language like its FP support
-%compared to freestanding DSLs or custom compilers.
-%I make the case that this approach is good and can be applied to even more areas!
-%What else can we embed to enable more expressive or performant hardware design and verification?
+% compared to freestanding DSLs or custom compilers.
+% I make the case that this approach is good and can be applied to even more areas!
+% What else can we embed to enable more expressive or performant hardware design and verification?
+
+% HDLs as eDSLs
+Over the past few decades, many hardware design languages (e.g. Lava, Chisel, PyMTL3, Amaranth) have been implemented as DSLs embedded in a general-purpose programming language.
+% Why we need more eDSLs beyond HW description for verif/design/collateral (e.g. for hammer)
+These HDLs focus on RTL design, but other aspects of hardware design and verification, would be served well with their own specialized DSLs.
+% such as writing testbenches and stimulus generators, and designing control flow machines, would be served well with specialized DSLs.
+% There are several aspects of hardware design and verification, that are not captured with existing eDSLs that mostly focus on RTL design.
+% Embedded DSLs (eDSLs) should be leveraged to describe several aspects of hardware design and verification, beyond RTL design, to
+% eDSLs in functional programming languages is perfect to create this multitude of DSLs - this is the best way!
+Taking advantage of functional programming features in a host language, makes creating \textit{functional APIs} for new eDSLs easy and ergonomic.
+% to show this we will show 3 functional eDSLs in Scala
+To show the value of this approach, we demonstrate three new eDSLs, embedded in a functional general-purpose programming language (Scala), specialized for testbench description, stimulus generation, and control flow compilation.
+
+% beyond RTL design, such as testbenches, stimulus generators, and control flow compilation.
+% We make the case that embedded DSLs are an ideal platform for HDLs, by leveraging their host languages to build \textit{functional APIs} for various aspects of hardware design and verification, such as RTL simulation, stimulus generation, and control flow compilation.
+
+
 \end{abstract}
 
 % \received{20 February 2007}
@@ -152,28 +170,41 @@ We make the case that embedded DSLs are an ideal platform for HDLs, by leveragin
 \label{fig:functional_apis}
 \end{figure}
 
-\section{Functional Principles}
+% \section{Functional Principles}
+\section{Seperating Description from Interpretation}
+% This design pattern is easy to implement with a monad
 % ADTs
 % Separating description from interpretation + combinators
 % Customizable interpreters
 % This technique has been applied to RTL-level HW design, but what other areas can we apply this to?
 
-Building APIs on the practical elements of functional programming provides several benefits beyond the mostly theoretical notions of referential transparency\cite{fpinscala}.
-Importantly, functional APIs seperate \textit{what to do} (the description) from \textit{how it is done} (the interpreter) (Figure \ref{fig:functional_apis}).
+% Building APIs on the practical elements of functional programming provides several benefits beyond the mostly theoretical notions of referential transparency\cite{fpinscala}.
+%Importantly, functional APIs seperate \textit{what to do} (the description) from \textit{how it is done} (the interpreter) (Figure \ref{fig:functional_apis}).
 
-This notion is already well understood in the context of HDLs implemented as eDSLs.
-eDSLs embed hardware primitives (datatypes, registers, memories, logical / arithmetic operators) and `connection' primitives (modules, IO ports, wires, bindings) in the host language as a set of algebraic datatypes (ADTs).
+%This notion is already well understood in the context of HDLs implemented as eDSLs.
+The notion of separating \textit{what to do} (the description) from \textit{how it is done} (the interpreter) is already well understood in the context of HDLs implemented as eDSLs (Figure \ref{fig:functional_apis}).
+eDSLs embed hardware primitives (datatypes, registers, memories, logical / arithmetic operators) and `connection' primitives (modules, IO ports, wires, bindings) in the host language as a set of algebraic data types (ADTs).
 The RTL designer instantiates the primitives and connects them together in a regular program written in the host language.
-Here, \textit{the description}, is an in-memory representation of a circuit that is constructed when the program is executed, while \textit{the interpreter} turns that representation into output (e.g. FIRRTL\cite{firrtl}, CIRCT\cite{circt} IR, Verilog, SMT).
+Here, \textit{the description}, is an in-memory representation of a circuit that is constructed when the program is executed, while \textit{the interpreter} turns that representation into output (e.g. FIRRTL\cite{firrtl}, CIRCT IR\cite{circt}, Verilog, SMT).
 
-The core features of the host language that enable functional eDSLs are 1) algebraic data types, 2) monadic composition sugar (or direct style alternatives\cite{dotty_cps_async, koka}), and 3) a strong macro system for source annotations.
+% In this paper we focus on functional embedded DSLs in Scala
+An eDSL that splits description and interpretation is particularly well suited for a functional monadic implementation, leveraging three features of the host language: 1) algebraic data types, 2) monadic composition sugar (or direct style alternatives\cite{dotty_cps_async, koka}), and 3) a strong macro system for source annotations.
 We will discuss three examples of functional eDSLs that leverage these features of the Scala language.
 %The same principle of separating description from interpretation has many other useful applications in hardware design and verification, albeit with different primitives and interpreters.
 
 %\section{SimCommand: Functional Testbench API}
 \section{A Functional Testbench API}
 
-While you can write testbenches in SystemVerilog, it is more ergonomic to use the same host language as your HDL, to exploit its features and share code.
+% In Systmverilog you can design hardware and write testbenches, but in most modern eDSL HDLs
+Popular testbench frameworks written in general-purpose languages already exist, such as cocotb\cite{cocotb} library (Python) and chiseltest\cite{chiseltest} (Scala).
+Writing testbenches in a general-purpose language is highly ergonomic since it allows us to take advantage of the language's type system, libraries, build tools, IDEs, and testing frameworks.
+However, these testbench libraries suffer from poor performance.
+We propose a functional eDSL that enables 
+
+%There are existing popular testbench frameworks... they are good because - general-purpose language allows you to make use of libraryes, debugging, etc.
+But the problem is they have poor performance, and we propose a functional eDSLs for chiseltest that shows significant perf improvmeent.
+% While you can write testbenches in SystemVerilog, it is more ergonomic to use the same host language as your HDL, to exploit its features and share code.
+
 However, existing testbench APIs in general-purpose languages, such as chiseltest\cite{chiseltest} and cocotb\cite{cocotb}, have poor performance due to their implementation of \texttt{fork/join} used for simulation threading.
 We propose a functional eDSL, SimCommand\cite{simcommand}, which achieves fast \texttt{fork/join}, by embedding testbench primitives in Scala and separating testbench description and interpretation.
 
@@ -199,21 +230,26 @@ val v = dequeue(queue.io).unsafeRun(queue.clock)
 \label{fig:simcommand_interp}
 \end{figure}
 
+\renewcommand{\cellalign}{tl}
+\renewcommand{\theadalign}{tl}
+
 \begin{figure*}
+% left out SyncReadMem for Data
 \small
-\begin{tabular}{p{3cm}>{\raggedright\arraybackslash}p{5cm}>{\raggedright\arraybackslash}p{4cm}>{\raggedright\arraybackslash}p{4cm}}\toprule
+\begin{tabular}{>{\raggedright\arraybackslash}p{3cm}>{\raggedright\arraybackslash}p{5cm}>{\raggedright\arraybackslash}p{4cm}>{\raggedright\arraybackslash}p{4cm}}\toprule
 ADT Base Type & ADT Primitives / Combinators & Composition Primitives & Interpreter Result\\\midrule
-\mintinline[]{scala}{Data} \cite{chisel} & \texttt{UInt}, \texttt{SInt} (base hardware datatypes) \newline \texttt{Bundle}, \texttt{Vec} (aggregate types) \newline \texttt{Mux}, \texttt{+}, \texttt{|}, $\dots$ (operators) \newline \texttt{Reg}, \texttt{SyncReadMem} (state types) & \texttt{Module}, \texttt{Input}, \texttt{Output}, \texttt{Wire}, \texttt{:=} (connect) & FIRRTL representation of a circuit constructed from running a Scala program \\\midrule
-\mintinline[]{scala}{Command[R]} \cite{simcommand} & \texttt{Poke}, \texttt{Peek}, \texttt{Step} (basic testbench ops) \newline \texttt{Fork}, \texttt{Join} (simulation threading) \newline \texttt{MakeChannel}, \texttt{Put}, \texttt{Get} (channels) & Monadic bind & Interaction with an RTL simulator, terminating with a value of type \texttt{R}\\\midrule
-\mintinline[]{scala}{Gen[A]} \cite{randomapi} & \texttt{uniform}, \texttt{range}, \texttt{normal}, \texttt{oneOf}, \texttt{constraint}\aste & Monadic bind & Values of type \texttt{A} conforming to the constraints\\\midrule
+\makecell{Chisel\cite{chisel}: \\\mintinline[]{scala}{Data}} & \texttt{UInt}, \texttt{SInt} (base hardware datatypes) \newline \texttt{Bundle}, \texttt{Vec} (aggregate types) \newline \texttt{Mux}, \texttt{+}, \texttt{|}, $\dots$ (operators) \newline \texttt{Reg} (state type) & \texttt{Module}, \texttt{Input}, \texttt{Output}, \texttt{Wire}, \texttt{:=} (connect) & FIRRTL representation of a circuit constructed from running a Scala program \\\midrule
+\makecell{SimCommand\cite{simcommand}: \\\mintinline[]{scala}{Command[R]}} & \texttt{Poke}, \texttt{Peek}, \texttt{Step} (basic testbench ops) \newline \texttt{Fork}, \texttt{Join} (simulation threading) \newline \texttt{MakeChannel}, \texttt{Put}, \texttt{Get} (channels) & Monadic bind & Interaction with an RTL simulator, terminating with a value of type \texttt{R}\\\midrule
+\makecell{Stimulus Generation\cite{randomapi}: \\\mintinline[]{scala}{Gen[A]}} & \texttt{uniform}, \texttt{range}, \texttt{normal}, \texttt{oneOf}, \texttt{constraint}\aste & Monadic bind & Values of type \texttt{A} conforming to the constraints\\\midrule
 %\mintinline[]{scala}{Property[T, S]} \cite{chiselsequences} & \texttt{AtomicProp}, \texttt{||}, \texttt{\&\&}, \texttt{|->} & \texttt{Concat}, \texttt{Intersect} & Monitor automaton for the \texttt{Property} using local state \texttt{S}\aste over traces of type \texttt{T}\aste\\\midrule
-\mintinline[]{scala}{Recipe} \cite{chisel_recipes} & \texttt{action}, \texttt{tick}, \texttt{fork}\aste & \texttt{sequential}, \texttt{while}, \texttt{ifThenElse} & Chisel RTL circuit that implements the imperative \texttt{Recipe} \\
+\makecell{chisel-recipes\cite{chisel_recipes}: \\\mintinline[]{scala}{Recipe}} & \texttt{action}, \texttt{tick}, \texttt{fork}\aste & \texttt{sequential}, \texttt{while}, \texttt{ifThenElse} & Chisel RTL circuit that implements the imperative \texttt{Recipe} \\
 \bottomrule
 \end{tabular}
 \caption{Overview of the primitives and final outputs of eDSLs for HW design and verification. {\small \aste = hypothetical / incomplete}}
 \end{figure*}
 
-Chiseltest uses JVM threads and mutexes, while cocotb uses Python's async/await coroutines to implement \texttt{fork/join}.
+% Chiseltest uses JVM threads and mutexes, while cocotb uses Python's async/await coroutines to implement \texttt{fork/join}.
+Only talk about chiseltest!
 These techniques cannot keep up with the high frequency of suspend/resume operations in simulation threads.
 In contrast, SimCommand uses monadic composition of testbench primitives\cite{hardcaml_step_testbench} to implement cooperatively yielding simulation threads that can suspend/resume quickly.
 
@@ -237,8 +273,8 @@ Separating description and interpretation yields an API that's 10-30x faster tha
 
 \section{Parametric Stimulus Generation}
 
-Traditionally, stimulus generation used either implicitly constrained generators (e.g. \texttt{Gen} from QuickCheck\cite{quickcheck}) or declarative constraint solvers (e.g. SystemVerilog + UVM constrained random\cite{riscv_dv}).
-We propose a hybrid API that mixes the sequential chaining support of \texttt{Gen}-style generators with the efficiency of declarative constrained random.
+Traditionally, stimulus generation used either imperative generators (e.g. \texttt{Gen} from QuickCheck\cite{quickcheck}) or declarative constraint solvers (e.g. SystemVerilog + UVM constrained random\cite{riscv_dv}).
+We propose a hybrid API that mixes the sequential chaining support of \texttt{Gen}-style generators with the ergonomics of declarative constrained random.
 The API's interpreter lets us specify a source of randomness; either an external library or a user-provided bytestream.
 This feature enables parametric fuzzing\cite{zest} of hardware designs (Figure \ref{fig:parametric_fuzzing}).
 
@@ -258,8 +294,13 @@ seqGen.generate(ParametricRandom(Seq[Byte](...)))
 \label{fig:randomapi}
 \end{figure}
 
-Separating the \textit{description of how} to generate stimulus, from the actual generation itself, cleanly separates the generation algorithm from the source of randomness (Figure \ref{fig:randomapi}).
-This design decision allows us to capture random decisions made during stimulus generation to obtain a detailed \textit{description of the interpretation}.
+Separating the \textit{description of how} to generate stimulus, from the actual generation itself, allows us to easily switch out the source of randomness (Figure \ref{fig:randomapi}).
+% cleanly separates the generation algorithm from the source of randomness (Figure \ref{fig:randomapi}).
+This design decision also allows us to easily capture random decisions made during stimulus generation.
+% to obtain a detailed \textit{description of the interpretation}.
+These decisions made by the generator can be used to improve the stimulus generation, either by mutating them in a fuzzer 
+The fuzzer can operate directly on the decisoin tree or 
+One more sentence about ML
 There are also opportunities to instrument the interpreter to produce a decision tree, which can serve as a high-level embedding of the stimulus.
 %opportunity to inject instrumentation in the interpreter to capture random decisions
 
