plarch23: fix ORCID link

--- a/papers/plarch23-fp_for_hw/plarch23-fp_for_hw.tex
+++ b/papers/plarch23-fp_for_hw/plarch23-fp_for_hw.tex
@@ -103,9 +103,8 @@ $^{(\ast)}$
 %% used to denote shared contribution to the research.
 
 %Young-Jin Park, Rohit Agarwal, Oliver Yu, Lixiang (Andy) Yin, and Bryan Ngo have worked on the eDSLs presented in this paper.
-\author{{\normalsize Vighnesh Iyer, Kevin Laeufer, Young-Jin Park, Rohit Agarwal, Lixiang Yin, Bryan Ngo, Oliver Yu, Koushik Sen, Borivoje Nikolić}}
+\author{{\normalsize \href{https://orcid.org/0000-0001-6934-6577}{Vighnesh Iyer}, \href{https://orcid.org/0000-0003-0942-7070}{Kevin Laeufer}, Young-Jin Park, Rohit Agarwal, Lixiang Yin, Bryan Ngo, Oliver Yu, \href{https://orcid.org/0000-0002-4539-9188}{Koushik Sen}, \href{https://orcid.org/0000-0003-2324-1715}{Borivoje Nikolić}}}
 \email{{vighnesh.iyer,laeufer,yjp20,rohaga,lyin19,bryanngo,oliveryu,ksen,bora}@berkeley.edu}
-\orcid{0000-0001-6934-6577}
 \affiliation{%
   \institution{UC Berkeley}
 }
